# M5Tuna

./: CMakeLists.txt  README.md  merge_files.cmd  partitions.csv  sdkconfig
components/M5GFX/src/lgfx/Fonts/efont/: lgfx_efont_en.c
components/M5GFX/src/lgfx/v1/: lgfx_fonts.cpp  lgfx_fonts.hpp
components/M5GFX/src/lgfx/v1/panel/: Panel_M5HDMI.cpp
components/M5Unified/src/utility/: Mic_Class.cpp
main/: CMakeLists.txt  defines.h  idf_component.yml  main.cpp  pitch_detector_task.cpp
main/app/: ui.cpp  ui.h
main/app/assets/: tuna.h
main/app/utils/: common_define.h
main/app/utils/anim/: scroll_text.cpp  scroll_text.h
main/app/utils/theme/: theme_define.h
main/app/utils/ui/: dialog.cpp  dialog.h
main/hal/: hal.h  hal_cardputer.cpp  hal_cardputer.h
main/hal/bat/: adc_read.c  adc_read.h
main/hal/button/: Button.cpp  Button.h
main/hal/keyboard/: keyboard.cpp  keyboard.h
main/hal/sdcard/: sdcard.cpp  sdcard.h
main/hal/usb/: usb.cpp  usb.h
main/hal/wifi/: wifi.cpp  wifi.h
